# ChangeLog for net-im/gossip
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.69 2007/12/04 17:48:56 eva Exp $

*gossip-0.28 (04 Dec 2007)

  04 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gossip-0.28-lm-nodebug.patch, +gossip-0.28.ebuild, metadata.xml:
  bump to 0.28, add gnome-keyring support and a fix wrt to the handling
  of debug code, fix bug #196218. Add some USE flag descriptions.

  22 Jul 2007; Samuli Suominen <drac@gentoo.org> gossip-0.9.ebuild,
  gossip-0.22.ebuild, gossip-0.23.ebuild, gossip-0.25.ebuild,
  gossip-0.26.ebuild:
  Remove virtual/x11 dep.

  08 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org> gossip-0.22.ebuild,
  gossip-0.23.ebuild, gossip-0.25.ebuild, gossip-0.26.ebuild:
  remove reference to old, removed dbus (bug #183696)

*gossip-0.26 (31 May 2007)

  31 May 2007; <tester@gentoo.org> +gossip-0.26.ebuild:
  Version bump, bug #180387

*gossip-0.25 (30 May 2007)

  30 May 2007; <tester@gentoo.org> +gossip-0.25.ebuild:
  Version bump

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> gossip-0.23.ebuild:
  Added ~ppc64; bug #170307

  12 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.22.ebuild,
  gossip-0.23.ebuild:
  Add dependency on libgnomeui-2, fixes bug #170637

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> gossip-0.23.ebuild:
  Keyworded ~sparc wrt #170307

  10 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.23.ebuild:
  Add galago USE flag, bug #169971

  08 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.23.ebuild:
  Ooops, shouldnt have been stable (and force telepathy off for now, its far
  from being stable)

*gossip-0.23 (07 Mar 2007)

  07 Mar 2007; Olivier Crête <tester@gentoo.org> +gossip-0.23.ebuild:
  Version bump

  07 Mar 2007; Olivier Crête <tester@gentoo.org> gossip-0.22.ebuild:
  Stable on amd64

  24 Feb 2007; nixnut <nixnut@gentoo.org> gossip-0.22.ebuild:
  Stable on ppc wrt bug 167825
