@@ -1,41 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gossip-0.28-lm-nodebug.patch 703 RMD160 726a34afd47a4332dc478883b454d0b3ecf993c1 SHA1 93f78c97c6261175a60eae68feee3569c60a022a SHA256 4671294ecbf9fd7f2d7a354f53cda6b153a81ff52cecfe7b1e3d482c1319d2ed
 MD5 e4adce446e484972a2b66332f3381386 files/gossip-0.28-lm-nodebug.patch 703
 RMD160 726a34afd47a4332dc478883b454d0b3ecf993c1 files/gossip-0.28-lm-nodebug.patch 703
 SHA256 4671294ecbf9fd7f2d7a354f53cda6b153a81ff52cecfe7b1e3d482c1319d2ed files/gossip-0.28-lm-nodebug.patch 703
 DIST gossip-0.22.tar.bz2 1295504 RMD160 36d050230a910ad41b8b949b1676266513442e3e SHA1 06f573f7a3347a17c42d96e21fa268b9a4949055 SHA256 ba118a93dfe4de03915dafb5c573846244674e78179b8f7fb05167cb5e119473
-DIST gossip-0.23.tar.bz2 1292386 RMD160 36ad5e45d0a5e692ce1cba43e5ea270589a4fbed SHA1 3f500b96e0474c1ee0d8dcd441ed0914ff543255 SHA256 f822d9cdadf03421b2b0240293930ced0f9ba1371eaf3161315dbd7972fa0dc3
-DIST gossip-0.25.tar.bz2 1336742 RMD160 bc6a7b5b60799471e6ebafeb0344ac132b917251 SHA1 dcb66eda09948520732829000e7b6d8cb9e8d083 SHA256 b3b2258a885e979e9df78af08bd68fea329bfdfa3afb8bec7817fc6e84860e4f
 DIST gossip-0.26.tar.bz2 1327332 RMD160 5937740d9fdab519301bb3809b032fd6253eb522 SHA1 661afea60e6ba1fe49afba28257bd96597aa5e60 SHA256 4d8deaf83c8aa50e179684510c8150dc34cf60b2480b1a89b68f9ca097c38730
 DIST gossip-0.28.tar.bz2 1416313 RMD160 5aefc21feb61c888101219a946b50214ed546268 SHA1 6490947b2adab8e8f4c952b20400a3455e404912 SHA256 59bd83f772001c4f4a0905b2834ad6830dcc8356e386b13752c532f02b40dbf4
-DIST gossip-0.9.tar.bz2 994982 RMD160 1a6ff83c6e4ca1f400475537e667cdf3f6d42538 SHA1 6b0c1b1fa1b861fccc12e13e3b4bdb10cbb04c8a SHA256 8397ef467bac32b4b2c5f1cc122e356f5262731b0206f6fe52540afb20ac4aea
 EBUILD gossip-0.22.ebuild 1160 RMD160 dc5f4a8fcf85423ea8fa521a6bd828357b69c96f SHA1 7d94137ee069981134ae84a7343b3b510faa5979 SHA256 fbb57c9d9c1bfc7b61d16eff0c3f1dae65974a0aa1516ad9e209540f19d98787
 MD5 6158b9b5b732bff2bf30e17e5e4e98d5 gossip-0.22.ebuild 1160
 RMD160 dc5f4a8fcf85423ea8fa521a6bd828357b69c96f gossip-0.22.ebuild 1160
 SHA256 fbb57c9d9c1bfc7b61d16eff0c3f1dae65974a0aa1516ad9e209540f19d98787 gossip-0.22.ebuild 1160
-EBUILD gossip-0.23.ebuild 1209 RMD160 240aa577553b52b49962a6919669998237d09719 SHA1 024754c44c4e9463893beace345c7fc86ddb8677 SHA256 0c6e75112721c44c6801723844962ae927aa799826d014b1cf0daca2489718d9
-MD5 450691832cb9685c36431257513229c1 gossip-0.23.ebuild 1209
-RMD160 240aa577553b52b49962a6919669998237d09719 gossip-0.23.ebuild 1209
-SHA256 0c6e75112721c44c6801723844962ae927aa799826d014b1cf0daca2489718d9 gossip-0.23.ebuild 1209
-EBUILD gossip-0.25.ebuild 1237 RMD160 9e9d3d1c3870b431c139a00ec8ad6923e5b08e4e SHA1 53b5c3f6e4279f727318d03fbdf0c5681c17ab79 SHA256 ac87dd65678636608fd356eb162b35dbed4d5f18dfc27c048a77e2c6c63765bd
-MD5 4d2186be1537af65c987da273500a4d9 gossip-0.25.ebuild 1237
-RMD160 9e9d3d1c3870b431c139a00ec8ad6923e5b08e4e gossip-0.25.ebuild 1237
-SHA256 ac87dd65678636608fd356eb162b35dbed4d5f18dfc27c048a77e2c6c63765bd gossip-0.25.ebuild 1237
 EBUILD gossip-0.26.ebuild 1213 RMD160 2126c87aeab76743bf8308f73f65d480d6e2e545 SHA1 aa58c7616e7be02e8f6a8ad9565781107039f0bd SHA256 c897e168b6bf2aaf53e93ecab93fe1bf9d2e420b97de5402a349d7a3d304daaf
 MD5 2461c73e5f84788ce9d89bdae3a28147 gossip-0.26.ebuild 1213
 RMD160 2126c87aeab76743bf8308f73f65d480d6e2e545 gossip-0.26.ebuild 1213
 SHA256 c897e168b6bf2aaf53e93ecab93fe1bf9d2e420b97de5402a349d7a3d304daaf gossip-0.26.ebuild 1213
-EBUILD gossip-0.28.ebuild 1717 RMD160 c47bc52dab4d33b15f25d26979729abda419f67d SHA1 98c1d1b10f4c8051eb1594ffc5ae820753d4a7c2 SHA256 573d8d6a0ce0b1f77da9e9a68e034c65b9f6fe5eba371223a2a14484776fa2f2
-MD5 0fa1da755dbddbcedb1deb114ec8e0c4 gossip-0.28.ebuild 1717
-RMD160 c47bc52dab4d33b15f25d26979729abda419f67d gossip-0.28.ebuild 1717
-SHA256 573d8d6a0ce0b1f77da9e9a68e034c65b9f6fe5eba371223a2a14484776fa2f2 gossip-0.28.ebuild 1717
-EBUILD gossip-0.9.ebuild 910 RMD160 74426206b2467a7fbcd2c506f99b2002d841f709 SHA1 df04d15addbb08e9400f96e913434f8f733eb915 SHA256 7f9d5ac189ab6fdcd33aa4d89a43ff947096828b6e245c72ca0037c2d70ff79c
-MD5 4a0b8183b2c1cee83adeae9ed5fbee41 gossip-0.9.ebuild 910
-RMD160 74426206b2467a7fbcd2c506f99b2002d841f709 gossip-0.9.ebuild 910
-SHA256 7f9d5ac189ab6fdcd33aa4d89a43ff947096828b6e245c72ca0037c2d70ff79c gossip-0.9.ebuild 910
-MISC ChangeLog 10018 RMD160 78f3f741e191da28eeb4a211d8dc5f66913d3030 SHA1 ef8229ca542d79200b9ccf57fd8b8aa56fc3e282 SHA256 d3825b837c0ae5225166f0e0649591b7d47f90ee7395f81ffef9f11a44844496
-MD5 8bfb12779db9b204f5b4b67d8239c153 ChangeLog 10018
-RMD160 78f3f741e191da28eeb4a211d8dc5f66913d3030 ChangeLog 10018
-SHA256 d3825b837c0ae5225166f0e0649591b7d47f90ee7395f81ffef9f11a44844496 ChangeLog 10018
+EBUILD gossip-0.28.ebuild 1847 RMD160 ae228338518d269848dbc39169d4cebd162ab784 SHA1 8b5485f5c4d344d4e869152daf42ac9d1fead2ef SHA256 3e594f4eea2e744165ba10a98d97cc7d22d0d0246e21a6bc2d3cb4c7ba5bb1a6
+MD5 6698b245c2e88c21cae12e75e48b4eb9 gossip-0.28.ebuild 1847
+RMD160 ae228338518d269848dbc39169d4cebd162ab784 gossip-0.28.ebuild 1847
+SHA256 3e594f4eea2e744165ba10a98d97cc7d22d0d0246e21a6bc2d3cb4c7ba5bb1a6 gossip-0.28.ebuild 1847
+MISC ChangeLog 10212 RMD160 79e4f7bf85b836f7729e2d6d7bc71305f60b9a5f SHA1 3138b0df9bdfa170583bf3e62b15c6f695d1ae91 SHA256 97060349789faf1edffcec02ef2570fc75c6be055b7107e9fb6f84298b385194
+MD5 91c84aa04a963339cc30a481bc6e15f7 ChangeLog 10212
+RMD160 79e4f7bf85b836f7729e2d6d7bc71305f60b9a5f ChangeLog 10212
+SHA256 97060349789faf1edffcec02ef2570fc75c6be055b7107e9fb6f84298b385194 ChangeLog 10212
 MISC metadata.xml 692 RMD160 632e934e227a5c863664cb41f35bf541ff5ff1e6 SHA1 269b8d56db7c8c9b27b4bb0f79a874f7ecdabaef SHA256 9757be10c53d11cf9065ba2414eae0314c72e363740062cc7cbef3826e2d5bfb
 MD5 ec6faf30744563e4fba4c0d138d587b4 metadata.xml 692
 RMD160 632e934e227a5c863664cb41f35bf541ff5ff1e6 metadata.xml 692
@@ -43,18 +31,16 @@ SHA256 9757be10c53d11cf9065ba2414eae0314c72e363740062cc7cbef3826e2d5bfb metadata
 MD5 7a6c8a403a00933880e869dd4f948b7c files/digest-gossip-0.22 241
 RMD160 46b8ce60ab297e9b17d16acd4942e91dbb7099ec files/digest-gossip-0.22 241
 SHA256 506316b6094ac0cd35098584b9171b36c6948f55beec09e6dedf18ed91dfa1d5 files/digest-gossip-0.22 241
-MD5 3cdf227216572cf0c1720e3f4c0faca9 files/digest-gossip-0.23 241
-RMD160 a6dbdc3c9c10d20fd2d721a1e8ddeffe0d88e6ab files/digest-gossip-0.23 241
-SHA256 9e60f4d9907a3a1fd0aa18cbc8ffc0054df074feec0ba4cbc1f3451d20c4c887 files/digest-gossip-0.23 241
-MD5 e8045eba001b9414787809d369d5f38b files/digest-gossip-0.25 241
-RMD160 2fa3703216011306b7e2ff496adf82873f1aea63 files/digest-gossip-0.25 241
-SHA256 3a7dddc1892d86872c482f7557739f29ed5f1cc29ec738c2ba99be6cb9ce6360 files/digest-gossip-0.25 241
 MD5 6bdfb9452d94728e0fe43607929b4c5b files/digest-gossip-0.26 241
 RMD160 1b73610cf3ba978d37a17d89623925ce73bdf31f files/digest-gossip-0.26 241
 SHA256 6e14e36288d894bba15749486f6b8a40f2274e91e0eb63b7b3f965d917772fa3 files/digest-gossip-0.26 241
 MD5 3e50f8db3f48e2e6464d9c838e1e4bba files/digest-gossip-0.28 241
 RMD160 1c3b8cddae5aaeb8119ee2a2744dead16f23a4e7 files/digest-gossip-0.28 241
 SHA256 f6001708f7a1d81e0bf446195dc0ba4273f0aeabf626d4edfdf7b646344d9dee files/digest-gossip-0.28 241
-MD5 4e21efec32c4c65dbfb928498522f410 files/digest-gossip-0.9 235
-RMD160 449bd29ef827f52d65e565039010c8d713fd33bb files/digest-gossip-0.9 235
-SHA256 fae5f3f14dbf24641ad10f899f6285af7748b0c4356876d11777b56739170a87 files/digest-gossip-0.9 235
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkd6l5wACgkQ1fmVwcYIWAYbEACgtWKmj0pU0Lrl9l6Ihm1xq4XK
+VAwAoMwH0T+M2j7qcpXZNdZocyx1HxtB
+=Uia2
+-----END PGP SIGNATURE-----
