@@ -1,3 +1,0 @@
-MD5 cb6d6b67e714009270e74e0acc055a54 gossip-0.25.tar.bz2 1336742
-RMD160 bc6a7b5b60799471e6ebafeb0344ac132b917251 gossip-0.25.tar.bz2 1336742
-SHA256 b3b2258a885e979e9df78af08bd68fea329bfdfa3afb8bec7817fc6e84860e4f gossip-0.25.tar.bz2 1336742
