@@ -1,3 +1,0 @@
-MD5 af017e1652a96009d30eeeead2dd4ef9 gossip-0.9.tar.bz2 994982
-RMD160 1a6ff83c6e4ca1f400475537e667cdf3f6d42538 gossip-0.9.tar.bz2 994982
-SHA256 8397ef467bac32b4b2c5f1cc122e356f5262731b0206f6fe52540afb20ac4aea gossip-0.9.tar.bz2 994982
