@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/gossip-0.28.ebuild,v 1.1 2007/12/04 17:48:56 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/gossip-0.28.ebuild,v 1.2 2008/01/01 19:42:15 eva Exp $
 
 inherit gnome2 eutils autotools
 
@@ -64,4 +64,9 @@ src_unpack() {
 	epatch "${FILESDIR}/${P}-lm-nodebug.patch"
 
 	eautoreconf
+}
+
+pkg_postinst() {
+	ewarn "This version will drop any previously registred accounts."
+	ewarn "However it does not drop history."
 }
