@@ -1,6 +1,11 @@
 # ChangeLog for net-im/gossip
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.69 2007/12/04 17:48:56 eva Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.70 2008/01/01 19:42:15 eva Exp $
+
+  01 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org> -gossip-0.9.ebuild,
+  -gossip-0.23.ebuild, -gossip-0.25.ebuild, gossip-0.28.ebuild:
+  add ewarn about account droping
+  prune old releases
 
 *gossip-0.28 (04 Dec 2007)
 
